--- a/views/reserve.html
+++ b/views/reserve.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
   <html>
     <head>
       <!--Import Google Icon Font-->
@@ -23,21 +23,23 @@
           </h1>
           <hr></hr>
           <h3 class="text-center">
-            Party of 5 (like the TV show). Be there or be on the waitlist
+            Current Reservations and Waiting List
           </h3>
           <p class="text-center">
-            <a class="btn btn-primary btn-lg" href="/tables" role="button">
-              <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-              View Tables
-            </a>
             <a class="btn btn-danger btn-lg" href="/reserve" role="button">
               <span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span>
               Make Reservations
             </a>
+            <a class="btn btn-default btn-lg" href="/" role="button">
+              <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+            </a>
           </p>
         </div>
-        <a href="#">API Table Link </a>
-        |<a href="#"> API Wait List</a>
+        <p>Control Panel</p>
+        <p>
+          <a href="/api/tables"> API Table Link </a>
+          |<a href="/api/waitlist"> API Wait List</a>
+        </p>
       </div>
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
